--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,7 @@ margin-top:80px;}
 .box02 .bx1 h3{  height:25px; font-size:12px; line-height:25px;}
 .box02 .bx1 p{font-size:11px; }
 .box02 .mar1{width: 800px; margin-left: 6%; margin-top: 30px;}
+.link{color: black;}
 /* .box02 .bx1 h3 span{ background:#070101; color:#FFF; padding:0px 5px; margin-right:5px;}
  */
 /*-----box3开始-----*/
